--- a/main.css
+++ b/main.css
@@ -1,254 +1,242 @@
+
+/* reset */
+
 html{
-color:#000;background:#fff
+	color:#000;background:#fff
 }
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{
-margin:0;padding:0
+body,div,dl,dt,dd,ol,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{
+	margin:0;padding:0
 }
-table{
-border-collapse:collapse;
-border-spacing:0
-}
+
 fieldset,img{
-border:0
+	border:0
 }
 address,caption,cite,code,dfn,em,strong,th,var{
-font-style:normal;
-font-weight:normal
+	font-style:normal;
+	font-weight:normal
 }
-ol,ul{
-list-style:none
-}
-caption,th{
-text-align:left
-}
+
 h1,h2,h3,h4,h5,h6{
-font-size:100%;
-font-weight:normal
+	font-size:100%;
+	font-weight:normal
 }
-q:before,q:after{
-content:''
-}
-abbr,acronym{
-border:0;
-font-variant:normal
-}
-sup{
-vertical-align:text-top
-}
-sub{
-vertical-align:text-bottom
-}
-input,textarea,select{
-font-family:inherit;
-font-size:inherit;
-font-weight:inherit
-}
-input,textarea,select{
-*font-size:100%
-}
-legend{
-color:#000
-}
+
+/* custom */
+
 html{
-background:#222
+	height: 100%;
+	/*background: #E4E4E4;*/
+	background: #292929;
 }
+
 body{
-color:#666;
-font:16px/22px 'Helvetica Neue',Arial,Helvetica,'Liberation Sans',FreeSans,sans-serif
+	height: 100%;
+	color:#545454;
+	font:16px/22px "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
-h1,h2,h3,h4{
-font-weight:bold
+
+.indicator {
+	width: 100%;
+	height: 15px;
+	background: url('http://typecode.com/static/img/bar_bg.png') repeat-x;
 }
-h1{
-font-size:44px;
-line-height:48px;
-color:#000
+
+.me {
+	color: black;
+	text-transform: uppercase;
+	text-decoration: none;
+	font-weight: 700;
+	font-size: 13px;
 }
-h2,h3{
-color:#333
+
+.menu {
+	float: right;
+	vertical-align: baseline;
 }
-h2{
-font-size:30px;
-line-height:34px
+
+.menu a {
+	color: black;
+	text-transform: uppercase;
+	text-decoration: none;
+	font-weight: 700;
+	font-size: 13px;
+	margin-left: 5px;
+	margin-right: 5px;
 }
-h3{
-font-size:24px;
-line-height:28px
+
+.menu a:hover {
+	color: #0084B4;
+	text-decoration: none;
 }
-h4{
-font-size:18px;
-line-height:22px
-}
+
 a{
-color:#0084b4;
-text-decoration:none
+	color:#0084b4;
+	text-decoration:none
 }
 a:hover,a:active{
-text-decoration:underline
+	text-decoration:underline
 }
 strong{
-font-weight:bold
+	font-weight:bold
 }
-.clear{
-clear:both
-}
-.content,.discover,.footer{
-width:937px;
-margin:0 auto
-}
-.content,.discover{
-margin-top:30px
-}
-.content,.discover{
--moz-border-radius:5px;
--moz-box-shadow:0 1px 3px rgba(0,0,0,0.15);
--webkit-border-radius:5px;
--webkit-box-shadow:0 1px 3px rgba(0,0,0,0.15);
-border-radius:5px;
-border:1px solid #111;
-border-top-color:#222;
-border-bottom-color:#000;
-box-shadow:0 1px 3px rgba(0,0,0,0.15)
-}
+
 .content{
-background-color:#fff;
-position:relative
-}
-.content .header{
-height:94px;
-padding:35px 40px;
-border-bottom:1px solid #ddd;
-position:relative;
-}
-
-.content .header a.blog{
-	position: absolute;	
-	top: 85px;
-	left: 460px;
-	width: 388px;
-	height: 39px;
-	background:url(./images/artwork/blogbanner.png) no-repeat;
-}
-
-.content .header a.blog:hover{
-	background:url(./images/artwork/blogbanneru.png) no-repeat;
-}
-
-.content .header h1,.content .header h2{
-margin-left:140px
-}
-.content .header h2{
-color:#777;font-size:26px;font-weight:normal;line-height:48px
-}
-
-.content .bigphoto{
-	background:url(./images/meal9.jpg)
-	no-repeat;padding-top:457px
-}
-
-.discover{background-color:#fff}
-.discover .item{
 	position:relative;
-	display:none;
-	padding:25px 40px 0;
-	height:355px;
-	-webkit-border-bottom-left-radius:5px;
-	-webkit-border-bottom-right-radius:5px;
-	-moz-border-radius-bottomleft:5px;
-	-moz-border-radius-bottomright:5px;
-	border-bottom-left-radius:5px;
-	border-bottom-right-radius:5px
+	width:75%;
+	min-width: 960px;
+	min-height: 100%;
+	margin:0 auto;
+
+	-webkit-box-shadow: 0 -3px 3px rgba(0, 0, 0, .2);
+	-moz-box-shadow: 0 -3px 3px rgba(0, 0, 0, .2);
+	box-shadow: 0 -3px 3px rgba(0, 0, 0, .2);
+
+	background-color:#fff;
 }
 
-.discover .item.active{display:block}
-.discover .item h3,.discover .item h4,.discover .item p{padding-bottom:10px}
-.discover .item h3{
-	font-size:26px;
-	line-height:30px;
-	margin-top:10px	
+.header {
+	width: 960px;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 25px;
+	padding-bottom: 25px;
 }
 
-.discover .item#resume{
-	padding-right:430px;
-	background:url(./images/artwork/resume.png) no-repeat 488px center;
+.inner {
+	width: 960px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
-.discover .item a.l1{
-	position: absolute;	
-	top: 54px;
-	left: 527px;
-	width: 156px;
-	height: 78px;
-}
+/*.speech {
+	padding: 25px 40px 25px;
+}*/
 
-.discover .item a.l1:hover{
-	background:url(./images/artwork/resume-tl1.png) -39px -9px no-repeat;
-}
-
-.discover .item a.l2{
-	position: absolute;
-	top: 68px;
-	left: 710px;
-	width: 163px;
-	height: 68px;
-}
-
-.discover .item a.l2:hover{
-	background:url(./images/artwork/resume-lifl.png) -225px -21px no-repeat;
+h1 {
+	font-size: 32px;
+	line-height: 1;
+	font-weight: 300;
+	margin-top: 20px;
+	margin-bottom: 80px;
+	text-align: center;
+	color: #464648;
+	-webkit-font-smoothing: antialiased;
 }
 
 
-.discover .item a.l3{
-	position: absolute;
-	top: 142px;
-	left: 530px;
-	width: 140px;
-	height: 76px;
+.row {
+	padding-bottom: 48px;
+	margin-bottom: 48px;
+	border-bottom: 1px solid #F5F5F7;
+	position: relative;
+	clear: both;
 }
 
-.discover .item a.l3:hover{
-	background:url(./images/artwork/resume-ifa.png) -46px -97px no-repeat;
+.row::before {
+	content: "";
+	display: table;
 }
 
-.discover .item a.l4{
-	position: absolute;
-	top: 160px;
-	left: 710px;
-	width: 170px;
-	height: 34px;
+.row::after {
+	content: "";
+	display: table;
+	clear: both;
 }
 
-.discover .item a.l5{
-	position: absolute;
-	top: 240px;
-	left: 535px;
+.text {
+	margin-right: 80px;
+	width: 480px;
+	float:left;
+}
+
+.text h2 {
+	font-size: 22px;
+	line-height: 1;
+	font-weight: 300;
+	margin-bottom: 24px;
+	color: #464648;
+	-webkit-font-smoothing: antialiased;
+}
+
+.text p {
+	font-size: 13px;
+	line-height: 24px;
+	color: #6E6E70;
+	-webkit-font-smoothing: antialiased;
+	padding-bottom: 10px;
+}
+
+.text a {
+	color: #6E6E70;
+	border-bottom: 1px dashed #6E6E70;
+	text-decoration: none;
+}
+
+.text a:hover {
+	text-decoration: none;
+}
+
+.border-box {
+	width: 334px;
+	height: 210px;
+	border: 1px solid #EBEBED;
+	border-radius: 5px;
+	background-color: white;
+	float: left;
+}
+
+.box {
+	width: 330px;
+	height: 206px;
+	background-size: cover;
+}
+
+.zenexity {
+	background-image: url('./images/zenexity-s.png');
+	background-position: center; 
+}
+
+.before {
+	background-image: url('./images/before.png');
+	background-position: center;
+}
+
+ul.logos {
+	margin-left: 0;
+	list-style: none;
+	clear:both;
+	display: block;
+}
+
+ul.logos li {
+	display: block;
+	float: left;
+	margin: 15px 15px 15px 15px;
+}
+
+ul.logos a {
+	display:block;
 	width: 136px;
-	height: 73px;
+	height: 64px;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center; 
 }
 
-.discover .item a.l5:hover{
-	background:url(./images/artwork/resume-obeo.png) -48px -196px no-repeat;
+.links {
+	text-transform: uppercase;
+	font-weight: 300;
+	font-size: 13px;
 }
 
-.discover .item a.l6{
-	position: absolute;
-	top: 236px;
-	left: 722px;
-	width: 128px;
-	height: 65px;
+.links a {
+	text-decoration: none;
+	color: black;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
-.discover .item a.l6:hover{
-	background:url(./images/artwork/resume-ibm.png) -235px -191px no-repeat;
+.links a:hover {
+  color: #0084B4;
 }
 
-
-.footer{
-	color:#888;
-	text-shadow:0 1px 0 #000;
-	font-size:12px;
-	padding:40px 0;
-	text-align:center
-}
-.footer a{color:#aaa}
-.footer li{display:inline;margin-right:8px}
