--- a/main.css
+++ b/main.css
@@ -91,6 +91,8 @@ strong{
 	box-shadow: 0 -3px 3px rgba(0, 0, 0, .2);
 
 	background-color:#fff;
+	padding-left:10px;
+	padding-right:10px;
 }
 
 .header {
